plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.2'
	id 'com.google.cloud.tools.jib' version '3.3.2'
}

group = 'app.teamwize'
version = '0.9.0'

java {
	sourceCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {

	implementation(platform("software.amazon.awssdk:bom:2.20.56"))
	implementation("software.amazon.awssdk:apache-client")
	implementation("software.amazon.awssdk:s3")

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.liquibase:liquibase-core'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
	implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.8.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	implementation 'com.auth0:java-jwt:4.3.0'


	compileOnly 'com.google.code.findbugs:jsr305:3.0.1'
	compileOnly 'com.google.code.findbugs:annotations:3.0.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
}

//tasks.withType<Test> {
//	useJUnitPlatform()
//}

jib {
	from {
		image = 'mcr.microsoft.com/openjdk/jdk:21-distroless'
	}
	to {
		image = 'ghcr.io/teamwize/api:dev'
		tags = ['dev']
	}
}